--- a/package.json
+++ b/package.json
@@ -9,6 +9,14 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "vite": "^5.2.0"
+    "rollup-plugin-terser": "^7.0.2",
+    "vite": "^5.2.0",
+    "vite-plugin-html": "^3.2.2",
+    "webpack": "^5.91.0",
+    "webpack-cli": "^5.1.4"
+  },
+  "dependencies": {
+    "html-minifier": "^4.0.0",
+    "terser": "^5.31.0"
   }
 }
